Rotating graphic no longer overlaps honeycomb menu making it unclickable

--- a/MainPage.css
+++ b/MainPage.css
@@ -14,6 +14,7 @@
 
 .inner {
     padding: 2em 0 2em 0;
+    z-index: 100;
 }
 
 .title {
